--- a/pages/admin/relatorio-visualizar.html
+++ b/pages/admin/relatorio-visualizar.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Visualizar Relatório - Admin - CrowdInvest</title>
+  <title>Visualizar Relatório - Admin - Alba Invest</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../../css/style.css">
   <style>
@@ -141,7 +141,7 @@
   <div class="dashboard">
     <div class="mobile-header">
       <div style="display: flex; align-items: center; gap: 10px;">
-        <a href="dashboard.html" class="logo" style="color: var(--primary);">CrowdInvest</a>
+        <a href="dashboard.html" class="logo-container"><img src="../../assets/logos/logo-orange.png" alt="Alba Invest" style="height: 32px;"></a>
         <span class="badge badge-warning">Admin</span>
       </div>
     </div>
@@ -149,7 +149,7 @@
     <!-- Sidebar -->
     <aside class="sidebar sidebar-dark">
       <div class="sidebar-logo">
-        <a href="dashboard.html" class="logo" style="color: white;">CrowdInvest</a>
+        <a href="dashboard.html" class="logo-container"><img src="../../assets/logos/logo-white.png" alt="Alba Invest" style="height: 32px;"></a>
         <span class="badge badge-warning" style="margin-left: 10px;">Admin</span>
       </div>
       <ul class="sidebar-menu">
@@ -481,7 +481,7 @@
 
           <!-- Report Footer -->
           <div class="report-footer">
-            <p><strong>CrowdInvest</strong> - Plataforma de Investimentos Alternativos Regulamentada pela CVM</p>
+            <p><strong>Alba Invest</strong> - Plataforma de Investimentos Alternativos Regulamentada pela CVM</p>
             <p>RCVM 88/2022 | Este relatório e confidencial e destinado exclusivamente ao uso interno.</p>
             <p style="margin-top: 10px;">Gerado automaticamente em 19/01/2026 as 15:30</p>
           </div>
