--- a/pages/emissor/nova-oferta-step4.html
+++ b/pages/emissor/nova-oferta-step4.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nova Oferta - Dados Financeiros - Portal Emissor - CrowdInvest</title>
+  <title>Nova Oferta - Dados Financeiros - Portal Emissor - Alba Invest</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../../css/style.css">
   <style>
@@ -82,13 +82,13 @@
 <body class="theme-parceiro">
   <div class="dashboard">
     <div class="mobile-header">
-      <a href="dashboard.html" class="logo">Alba Invest</a>
+      <a href="dashboard.html" class="logo-container"><img src="../../assets/logos/logo-orange.png" alt="Alba Invest" style="height: 32px;"></a>
     </div>
 
     <!-- Sidebar Emissor -->
     <aside class="sidebar" style="background: linear-gradient(180deg, #5b21b6 0%, #7c3aed 100%);">
       <div class="sidebar-logo">
-        <a href="dashboard.html" class="logo" style="color: white;">CrowdInvest</a>
+        <a href="dashboard.html" class="logo-container"><img src="../../assets/logos/logo-white.png" alt="Alba Invest" style="height: 32px;"></a>
         <span class="badge" style="background: white; color: #7c3aed; margin-left: 10px;">Emissor</span>
       </div>
 
