--- a/pages/admin/imposto-renda.html
+++ b/pages/admin/imposto-renda.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Imposto de Renda - Admin - CrowdInvest</title>
+  <title>Imposto de Renda - Admin - Alba Invest</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../../css/style.css">
 </head>
@@ -11,7 +11,7 @@
   <div class="dashboard">
     <div class="mobile-header">
       <div style="display: flex; align-items: center; gap: 10px;">
-        <a href="dashboard.html" class="logo" style="color: var(--primary);">CrowdInvest</a>
+        <a href="dashboard.html" class="logo-container"><img src="../../assets/logos/logo-orange.png" alt="Alba Invest" style="height: 32px;"></a>
         <span class="badge badge-warning">Admin</span>
       </div>
     </div>
@@ -19,7 +19,7 @@
     <!-- Sidebar -->
     <aside class="sidebar sidebar-dark">
       <div class="sidebar-logo">
-        <a href="dashboard.html" class="logo" style="color: white;">CrowdInvest</a>
+        <a href="dashboard.html" class="logo-container"><img src="../../assets/logos/logo-white.png" alt="Alba Invest" style="height: 32px;"></a>
         <span class="badge badge-warning" style="margin-left: 10px;">Admin</span>
       </div>
       <ul class="sidebar-menu">
