--- a/pages/investidor/meus-investimentos.html
+++ b/pages/investidor/meus-investimentos.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Redirecionando... - CrowdInvest</title>
+  <title>Redirecionando... - Alba Invest</title>
   <meta http-equiv="refresh" content="0; url=carteira.html">
   <script>window.location.href = "carteira.html";</script>
 </head>
