--- a/pages/parceiro/comunicados.html
+++ b/pages/parceiro/comunicados.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Comunicados aos Clientes - Parceiro - CrowdInvest</title>
+  <title>Comunicados aos Clientes - Parceiro - Alba Invest</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../../css/style.css">
   <style>
@@ -27,12 +27,12 @@
 <body class="theme-parceiro">
   <div class="dashboard">
     <div class="mobile-header">
-      <a href="dashboard.html" class="logo">Alba Invest</a>
+      <a href="dashboard.html" class="logo-container"><img src="../../assets/logos/logo-orange.png" alt="Alba Invest" style="height: 32px;"></a>
     </div>
 
     <aside class="sidebar sidebar-green">
       <div class="sidebar-logo">
-        <a href="dashboard.html" class="logo">Alba Invest</a>
+        <a href="dashboard.html" class="logo-container"><img src="../../assets/logos/logo-white.png" alt="Alba Invest" style="height: 32px;"></a>
         <span class="badge" style="background: white; color: #059669; margin-left: 10px;">Parceiro</span>
       </div>
       <!-- Profile Mode Card - Elegante -->
@@ -91,7 +91,7 @@
         <div class="alert alert-info mb-20">
           <i class="bi bi-shield-check"></i>
           <div>
-            <strong>Comunicados Moderados:</strong> Todos os comunicados são revisados pela equipe CrowdInvest antes de serem enviados aos investidores.
+            <strong>Comunicados Moderados:</strong> Todos os comunicados são revisados pela equipe Alba Invest antes de serem enviados aos investidores.
             Prazo de análise: <strong>até 24 horas</strong> em dias úteis.
           </div>
         </div>
@@ -682,7 +682,7 @@
         <h3><i class="bi bi-send"></i> Enviar para Aprovação</h3>
         <button class="modal-close" onclick="hideModal('enviarAprovacaoModal')">&times;</button>
       </div>
-      <p>O comunicado será enviado para moderação pela equipe CrowdInvest.</p>
+      <p>O comunicado será enviado para moderação pela equipe Alba Invest.</p>
       <div class="alert alert-info mt-20">
         <i class="bi bi-info-circle"></i>
         <div>
