--- a/pages/parceiro/imposto-renda.html
+++ b/pages/parceiro/imposto-renda.html
@@ -3,20 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Imposto de Renda - Parceiro - CrowdInvest</title>
+  <title>Imposto de Renda - Parceiro - Alba Invest</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../../css/style.css">
 </head>
 <body class="theme-parceiro">
   <div class="dashboard">
     <div class="mobile-header">
-      <a href="dashboard.html" class="logo">Alba Invest</a>
+      <a href="dashboard.html" class="logo-container"><img src="../../assets/logos/logo-orange.png" alt="Alba Invest" style="height: 32px;"></a>
     </div>
 
     <!-- Sidebar -->
     <aside class="sidebar sidebar-green">
       <div class="sidebar-logo">
-        <a href="dashboard.html" class="logo">Alba Invest</a>
+        <a href="dashboard.html" class="logo-container"><img src="../../assets/logos/logo-white.png" alt="Alba Invest" style="height: 32px;"></a>
         <span class="badge" style="background: white; color: #059669; margin-left: 10px;">Parceiro</span>
       </div>
       <!-- Profile Mode Card - Elegante -->
@@ -821,7 +821,7 @@
                   <div style="width: 28px; height: 28px; background: var(--primary); color: white; border-radius: 50%; display: flex; align-items: center; justify-content: center; flex-shrink: 0; font-weight: bold; font-size: 0.875rem;">2</div>
                   <div>
                     <strong>CNPJ da Fonte Pagadora</strong>
-                    <p class="text-muted" style="font-size: 0.875rem;">Informe o CNPJ da CrowdInvest como fonte pagadora</p>
+                    <p class="text-muted" style="font-size: 0.875rem;">Informe o CNPJ da Alba Invest como fonte pagadora</p>
                   </div>
                 </div>
 
@@ -990,7 +990,7 @@
           <div class="grid-2" style="gap: 20px;">
             <div style="padding: 15px; background: var(--bg); border-radius: var(--radius);">
               <p class="text-muted" style="font-size: 0.75rem; margin-bottom: 5px;">Fonte Pagadora</p>
-              <strong>CrowdInvest Plataforma de Investimentos Ltda</strong>
+              <strong>Alba Invest Plataforma de Investimentos Ltda</strong>
               <p class="text-muted" style="font-size: 0.875rem; margin-top: 5px;">CNPJ: 12.345.678/0001-99</p>
             </div>
             <div style="padding: 15px; background: var(--bg); border-radius: var(--radius);">
