--- a/pages/parceiro/relatorio-resumo.html
+++ b/pages/parceiro/relatorio-resumo.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Resumo da Oferta - Relatórios - CrowdInvest</title>
+  <title>Resumo da Oferta - Relatórios - Alba Invest</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../../css/style.css">
   <style>
@@ -20,12 +20,12 @@
 <body class="theme-parceiro">
   <div class="dashboard">
     <div class="mobile-header no-print">
-      <a href="dashboard.html" class="logo">Alba Invest</a>
+      <a href="dashboard.html" class="logo-container"><img src="../../assets/logos/logo-orange.png" alt="Alba Invest" style="height: 32px;"></a>
     </div>
 
     <aside class="sidebar sidebar-green no-print">
       <div class="sidebar-logo">
-        <a href="dashboard.html" class="logo">Alba Invest</a>
+        <a href="dashboard.html" class="logo-container"><img src="../../assets/logos/logo-white.png" alt="Alba Invest" style="height: 32px;"></a>
         <span class="badge" style="background: white; color: #059669; margin-left: 10px;">Parceiro</span>
       </div>
       <div class="profile-mode-card" id="profileModeCard">
