--- a/pages/investidor/imposto-renda.html
+++ b/pages/investidor/imposto-renda.html
@@ -3,20 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Imposto de Renda - Investidor - CrowdInvest</title>
+  <title>Imposto de Renda - Investidor - Alba Invest</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../../css/style.css">
 </head>
 <body class="theme-investidor">
   <div class="dashboard">
     <div class="mobile-header">
-      <a href="dashboard.html" class="logo">Alba Invest</a>
+      <a href="dashboard.html" class="logo-container"><img src="../../assets/logos/logo-orange.png" alt="Alba Invest" style="height: 32px;"></a>
     </div>
 
     <!-- Sidebar -->
     <aside class="sidebar">
       <div class="sidebar-logo">
-        <a href="dashboard.html" class="logo">Alba Invest</a>
+        <a href="dashboard.html" class="logo-container"><img src="../../assets/logos/logo-white.png" alt="Alba Invest" style="height: 32px;"></a>
       </div>
       <ul class="sidebar-menu">
         <li><a href="dashboard.html"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
@@ -94,7 +94,7 @@
           </div>
 
           <p class="text-muted" style="font-size: 0.875rem;">
-            O informe incluira todos os rendimentos recebidos (dividendos, juros, amortizações) e movimentações realizadas no ano de 2025 na plataforma CrowdInvest.
+            O informe incluira todos os rendimentos recebidos (dividendos, juros, amortizações) e movimentações realizadas no ano de 2025 na plataforma Alba Invest.
           </p>
         </div>
 
@@ -853,7 +853,7 @@
       <div style="background: var(--bg); padding: 20px; border-radius: var(--radius); margin-bottom: 20px;">
         <div class="flex-between" style="margin-bottom: 20px;">
           <div>
-            <strong style="font-size: 1.25rem;">CrowdInvest Plataforma de Investimentos Ltda.</strong>
+            <strong style="font-size: 1.25rem;">Alba Invest Plataforma de Investimentos Ltda.</strong>
             <p class="text-muted">CNPJ: 43.413.213/0001-58</p>
           </div>
           <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='60' height='60' viewBox='0 0 60 60'%3E%3Crect fill='%232563eb' width='60' height='60' rx='8'/%3E%3Ctext x='50%25' y='50%25' fill='white' text-anchor='middle' dy='.35em' font-family='Arial' font-size='24' font-weight='bold'%3ECI%3C/text%3E%3C/svg%3E" alt="Logo">
