--- a/pages/admin-login.html
+++ b/pages/admin-login.html
@@ -3,15 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Admin Login - CrowdInvest</title>
+  <title>Admin Login - Alba Invest</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../css/style.css">
 </head>
 <body class="theme-admin">
-  <div class="auth-page" style="background: linear-gradient(135deg, #1e293b, #334155);">
+  <div class="auth-page" style="background: var(--primary-gradient);">
     <div class="auth-box">
       <div class="auth-logo">
-        <a href="../index.html" class="logo">Alba Invest</a>
+        <a href="../index.html" style="text-decoration: none;">
+          <img src="../assets/logos/logo-white.png" alt="Alba Invest" style="height: 48px;">
+        </a>
       </div>
       <h1 class="auth-title">Login Admin</h1>
       <p class="auth-subtitle">Acesso restrito a administradores</p>
