--- a/pages/empresas-inadimplentes.html
+++ b/pages/empresas-inadimplentes.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Empresas Inadimplentes - Transparência sobre empresas com obrigações pendentes na CrowdInvest.">
-  <title>Empresas Inadimplentes - CrowdInvest</title>
+  <meta name="description" content="Empresas Inadimplentes - Transparência sobre empresas com obrigações pendentes na Alba Invest.">
+  <title>Empresas Inadimplentes - Alba Invest</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/pages.css">
@@ -23,7 +23,7 @@
       <!-- Header 2026 -->
       <header class="header">
         <div class="container header-content">
-          <a href="../index.html" class="logo">Alba Invest</a>
+          <a href="../index.html" class="logo-container"><img src="../assets/logos/logo-orange.png" alt="Alba Invest" style="height: 54px;"></a>
           <button class="menu-toggle" onclick="toggleMobileMenu()"><i class="bi bi-list"></i></button>
           <nav class="nav">
             <a href="../index.html">Início</a>
@@ -60,7 +60,7 @@
             <div>
               <h3 style="margin-bottom: 10px; color: #7f1d1d;">Sobre está Página</h3>
               <p style="color: #991b1b; line-height: 1.7; margin-bottom: 0;">
-                Em conformidade com a Resolução CVM 88/2022, a CrowdInvest mantem está página atualizada com informações
+                Em conformidade com a Resolução CVM 88/2022, a Alba Invest mantem está página atualizada com informações
                 sobre empresas que captaram recursos através da plataforma e que possuem obrigações pendentes junto aos
                 investidores. Esta é uma medida de transparência obrigatória que visa proteger e informar os investidores.
               </p>
@@ -149,7 +149,7 @@
                 <p class="text-muted" style="font-size: 0.9rem; line-height: 1.7;">
                   A empresa deixou de honrar os pagamentos de juros previstos para o 3o trimestre de 2025.
                   Após tentativas de contato e notificações formais, a empresa alegou dificuldades financeiras
-                  decorrentes de perda de contratos importantes. A CrowdInvest iníciou procedimentos de cobranca
+                  decorrentes de perda de contratos importantes. A Alba Invest iníciou procedimentos de cobranca
                   e acionou as garantias previstas no contrato.
                 </p>
               </div>
