--- a/pages/ofertas.html
+++ b/pages/ofertas.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ofertas - CrowdInvest</title>
+  <title>Ofertas - Alba Invest</title>
   <meta http-equiv="refresh" content="0;url=login.html">
   <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -11,7 +11,7 @@
   <div class="auth-page">
     <div class="auth-box text-center">
       <div class="auth-logo">
-        <a href="../index.html" class="logo">Alba Invest</a>
+        <a href="../index.html" class="logo-container"><img src="../assets/logos/logo-orange.png" alt="Alba Invest" style="height: 54px;"></a>
       </div>
       <p class="text-muted">Para ver as ofertas, faça login...</p>
       <p style="margin-top: 15px;">
