--- a/pages/portal.html
+++ b/pages/portal.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Selecionar Portal - CrowdInvest</title>
+  <title>Selecionar Portal - Alba Invest</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/theme-investidor.css">
@@ -22,7 +22,9 @@
     <!-- Header -->
     <header class="portal-header">
       <div class="container">
-        <a href="../index.html" class="logo">Alba Invest</a>
+        <a href="../index.html" class="logo-container" style="text-decoration: none;">
+          <img src="../assets/logos/logo-orange.png" alt="Alba Invest" style="height: 32px;">
+        </a>
         <a href="../index.html" class="text-muted" style="text-decoration: none;">
           <i class="bi bi-arrow-left"></i> Voltar ao site
         </a>
@@ -104,12 +106,12 @@
                 <td>Código por Email, SMS ou WhatsApp</td>
               </tr>
               <tr>
-                <td><strong><i class="bi bi-building" style="color: #059669;"></i> Parceiro</strong></td>
+                <td><strong><i class="bi bi-building" style="color: var(--primary);"></i> Parceiro</strong></td>
                 <td>Empresas emissoras de ofertas na plataforma</td>
                 <td>Código por Email, SMS ou WhatsApp</td>
               </tr>
               <tr>
-                <td><strong><i class="bi bi-shield-lock" style="color: #1e293b;"></i> Admin</strong></td>
+                <td><strong><i class="bi bi-shield-lock" style="color: var(--text);"></i> Admin</strong></td>
                 <td>Equipe de operações da plataforma</td>
                 <td>Código por aplicativo (Google/Microsoft Authenticator)</td>
               </tr>
