--- a/pages/2fa-codigo.html
+++ b/pages/2fa-codigo.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Digite o Codigo - CrowdInvest</title>
+  <title>Digite o Codigo - Alba Invest</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -11,7 +11,7 @@
   <div class="auth-page">
     <div class="auth-box">
       <div class="auth-logo">
-        <a href="../index.html" class="logo">Alba Invest</a>
+        <a href="../index.html" class="logo-container"><img src="../assets/logos/logo-orange.png" alt="Alba Invest" style="height: 54px;"></a>
       </div>
       <h1 class="auth-title">Digite o Código</h1>
       <p class="auth-subtitle">Enviamos um código de 6 digitos para seu e-mail</p>
@@ -36,25 +36,25 @@
       <div class="text-center mt-20">
         <p class="text-muted">Não recebeu o código?</p>
         <p>
-          <a href="#" style="color: var(--primary);" onclick="showModal('modalReenviar')">Reenviar código</a>
+          <a href="#" class="link-primary" onclick="showModal('modalReenviar')">Reenviar código</a>
           <span class="text-muted"> (águarde <span id="countdown">2:00</span>)</span>
         </p>
       </div>
 
       <div class="text-center mt-20">
-        <a href="2fa-escolher.html" style="color: var(--text-muted);">&larr; Escolher outro metodo</a>
+        <a href="2fa-escolher.html" class="link-muted">&larr; Escolher outro metodo</a>
       </div>
 
       <!-- CVM Disclaimer -->
       <div class="auth-disclaimer">
         <p><i class="bi bi-shield-check"></i> Plataforma autorizada CVM - RCVM 88/2022</p>
-        <p class="text-muted" style="font-size: 0.7rem;">Investimentos envolvem riscos. Leia o material da oferta antes de investir.</p>
+        <p class="text-muted disclaimer-text">Investimentos envolvem riscos. Leia o material da oferta antes de investir.</p>
       </div>
     </div>
   </div>
 
   <!-- Modal Reenviar -->
-  <div id="modalReenviar" class="modal-overlay" style="display: none;">
+  <div id="modalReenviar" class="modal-overlay hidden">
     <div class="modal">
       <div class="modal-header">
         <h3>Código Reenviado</h3>
