--- a/pages/admin-setup-totp.html
+++ b/pages/admin-setup-totp.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Configurar Authenticator - CrowdInvest</title>
+  <title>Configurar Authenticator - Alba Invest</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -11,7 +11,7 @@
   <div class="auth-page" style="background: linear-gradient(135deg, #1e293b, #334155);">
     <div class="auth-box" style="max-width: 500px;">
       <div class="auth-logo">
-        <a href="../index.html" class="logo">Alba Invest</a>
+        <a href="../index.html" class="logo-container"><img src="../assets/logos/logo-orange.png" alt="Alba Invest" style="height: 54px;"></a>
       </div>
       <h1 class="auth-title">Configurar Authenticator</h1>
       <p class="auth-subtitle">Configure seu app de autenticação TOTP</p>
@@ -52,7 +52,7 @@
           </div>
         </div>
         <p class="text-muted" style="font-size: 0.875rem; margin-top: 15px;">
-          CrowdInvest Admin - admin@albainvest.com.br
+          Alba Invest Admin - admin@albainvest.com.br
         </p>
       </div>
 
