--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cadastro - CrowdInvest</title>
+  <title>Cadastro - Alba Invest</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -18,7 +18,9 @@
   <div class="auth-page">
     <div class="auth-box" style="max-width: 500px;">
       <div class="auth-logo">
-        <a href="../index.html" class="logo">Alba Invest</a>
+        <a href="../index.html" style="text-decoration: none;">
+          <img src="../assets/logos/logo-orange.png" alt="Alba Invest" style="height: 48px;">
+        </a>
       </div>
       <h1 class="auth-title">Criar Conta</h1>
       <p class="auth-subtitle">Cadastre-se para começar a investir</p>
