--- a/pages/fale-conosco.html
+++ b/pages/fale-conosco.html
@@ -25,7 +25,9 @@
       <!-- Header 2026 -->
       <header class="header">
         <div class="container header-content">
-          <a href="../index.html" class="logo">Alba Invest</a>
+          <a href="../index.html" class="logo-container">
+            <img src="../assets/logos/logo-orange.png" alt="Alba Invest" style="height: 54px;">
+          </a>
           <button class="menu-toggle" onclick="toggleMobileMenu()"><i class="bi bi-list"></i></button>
           <nav class="nav">
             <a href="../index.html">Início</a>
@@ -44,7 +46,7 @@
     <div class="mobile-overlay" onclick="closeMobileMenus()"></div>
 
     <!-- Hero Section -->
-    <section style="background: linear-gradient(135deg, #1e40af 0%, #3b82f6 100%); color: white; padding: 60px 0;">
+    <section style="background: var(--primary-gradient); color: white; padding: 60px 0;">
       <div class="container text-center">
         <h1 style="font-size: 2.5rem; font-weight: 800; margin-bottom: 15px;">Fale Conosco</h1>
         <p style="font-size: 1.1rem; opacity: 0.9; max-width: 600px; margin: 0 auto;">
@@ -64,7 +66,7 @@
             
             <div style="display: flex; flex-direction: column; gap: 25px;">
               <div style="display: flex; gap: 15px; align-items: flex-start;">
-                <div style="width: 50px; height: 50px; background: linear-gradient(135deg, #1e40af, #3b82f6); border-radius: 12px; display: flex; align-items: center; justify-content: center; color: white; font-size: 1.25rem; flex-shrink: 0;">
+                <div style="width: 50px; height: 50px; background: var(--primary-gradient); border-radius: 12px; display: flex; align-items: center; justify-content: center; color: white; font-size: 1.25rem; flex-shrink: 0;">
                   <i class="bi bi-envelope"></i>
                 </div>
                 <div>
@@ -75,7 +77,7 @@
               </div>
 
               <div style="display: flex; gap: 15px; align-items: flex-start;">
-                <div style="width: 50px; height: 50px; background: linear-gradient(135deg, #059669, #10b981); border-radius: 12px; display: flex; align-items: center; justify-content: center; color: white; font-size: 1.25rem; flex-shrink: 0;">
+                <div style="width: 50px; height: 50px; background: linear-gradient(135deg, var(--success), #047857); border-radius: 12px; display: flex; align-items: center; justify-content: center; color: white; font-size: 1.25rem; flex-shrink: 0;">
                   <i class="bi bi-whatsapp"></i>
                 </div>
                 <div>
@@ -86,7 +88,7 @@
               </div>
 
               <div style="display: flex; gap: 15px; align-items: flex-start;">
-                <div style="width: 50px; height: 50px; background: linear-gradient(135deg, #dc2626, #ef4444); border-radius: 12px; display: flex; align-items: center; justify-content: center; color: white; font-size: 1.25rem; flex-shrink: 0;">
+                <div style="width: 50px; height: 50px; background: var(--accent); border-radius: 12px; display: flex; align-items: center; justify-content: center; color: white; font-size: 1.25rem; flex-shrink: 0;">
                   <i class="bi bi-geo-alt"></i>
                 </div>
                 <div>
