--- a/pages/faq.html
+++ b/pages/faq.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Perguntas frequentes sobre Investimentos Alternativos de investimento, RCVM 88, e como funciona a plataforma CrowdInvest.">
-  <title>Perguntas Frequentes (FAQ) - CrowdInvest</title>
+  <meta name="description" content="Perguntas frequentes sobre Investimentos Alternativos de investimento, RCVM 88, e como funciona a plataforma Alba Invest.">
+  <title>Perguntas Frequentes (FAQ) - Alba Invest</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/theme-investidor.css">
@@ -25,7 +25,7 @@
       <!-- Header 2026 -->
       <header class="header">
         <div class="container header-content">
-          <a href="../index.html" class="logo">Alba Invest</a>
+          <a href="../index.html" class="logo-container"><img src="../assets/logos/logo-orange.png" alt="Alba Invest" style="height: 54px;"></a>
           <button class="menu-toggle" onclick="toggleMobileMenu()"><i class="bi bi-list"></i></button>
           <nav class="nav">
             <a href="../index.html">Início</a>
@@ -100,11 +100,11 @@
             <div class="card" style="margin-bottom: 16px;">
               <details style="padding: 20px;">
                 <summary style="cursor: pointer; font-weight: 600; list-style: none; display: flex; justify-content: space-between; align-items: center;">
-                  O que é a CrowdInvest?
+                  O que é a Alba Invest?
                   <i class="bi bi-chevron-down" style="color: var(--text-muted);"></i>
                 </summary>
                 <p class="text-muted" style="margin-top: 15px; line-height: 1.8;">
-                  A CrowdInvest é uma plataforma de Investimentos Alternativos de investimento autorizada pela CVM (Comissão de Valores Mobiliários) nos termos da Resolução RCVM 88/2022. Conectamos investidores a empresas brasileiras que buscam captar recursos para crescer, permitindo que você se torne sócio ou credor de startups e PMEs promissoras.
+                  A Alba Invest é uma plataforma de Investimentos Alternativos de investimento autorizada pela CVM (Comissão de Valores Mobiliários) nos termos da Resolução RCVM 88/2022. Conectamos investidores a empresas brasileiras que buscam captar recursos para crescer, permitindo que você se torne sócio ou credor de startups e PMEs promissoras.
                 </p>
               </details>
             </div>
@@ -116,7 +116,7 @@
                   <i class="bi bi-chevron-down" style="color: var(--text-muted);"></i>
                 </summary>
                 <p class="text-muted" style="margin-top: 15px; line-height: 1.8;">
-                  Qualquer pessoa física maior de 18 anos, residente no Brasil, com CPF válido e conta bancária em seu nome pode investir através da CrowdInvest. O cadastro é gratuito e não requer envio de documentos - realizamos a validação de identidade automaticamente através de bureaus de dados.
+                  Qualquer pessoa física maior de 18 anos, residente no Brasil, com CPF válido e conta bancária em seu nome pode investir através da Alba Invest. O cadastro é gratuito e não requer envio de documentos - realizamos a validação de identidade automaticamente através de bureaus de dados.
                 </p>
               </details>
             </div>
@@ -124,11 +124,11 @@
             <div class="card" style="margin-bottom: 16px;">
               <details style="padding: 20px;">
                 <summary style="cursor: pointer; font-weight: 600; list-style: none; display: flex; justify-content: space-between; align-items: center;">
-                  A CrowdInvest é regulamentada?
+                  A Alba Invest é regulamentada?
                   <i class="bi bi-chevron-down" style="color: var(--text-muted);"></i>
                 </summary>
                 <p class="text-muted" style="margin-top: 15px; line-height: 1.8;">
-                  Sim! A CrowdInvest opera em conformidade com a Resolução CVM 88/2022, que regulamenta o Investimentos Alternativos de investimento no Brasil. As ofertas realizadas em nossa plataforma estão automaticamente dispensadas de registro na CVM, mas seguem todas as regras de transparência e proteção ao investidor estabelecidas pela regulamentação.
+                  Sim! A Alba Invest opera em conformidade com a Resolução CVM 88/2022, que regulamenta o Investimentos Alternativos de investimento no Brasil. As ofertas realizadas em nossa plataforma estão automaticamente dispensadas de registro na CVM, mas seguem todas as regras de transparência e proteção ao investidor estabelecidas pela regulamentação.
                 </p>
               </details>
             </div>
