--- a/pages/ofertas-encerradas.html
+++ b/pages/ofertas-encerradas.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Ofertas Encerradas - Histórico completo de ofertas realizadas na CrowdInvest com resultados e performance.">
-  <title>Ofertas Encerradas - CrowdInvest</title>
+  <meta name="description" content="Ofertas Encerradas - Histórico completo de ofertas realizadas na Alba Invest com resultados e performance.">
+  <title>Ofertas Encerradas - Alba Invest</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/pages.css">
@@ -23,7 +23,7 @@
       <!-- Header 2026 -->
       <header class="header">
         <div class="container header-content">
-          <a href="../index.html" class="logo">Alba Invest</a>
+          <a href="../index.html" class="logo-container"><img src="../assets/logos/logo-orange.png" alt="Alba Invest" style="height: 54px;"></a>
           <button class="menu-toggle" onclick="toggleMobileMenu()"><i class="bi bi-list"></i></button>
           <nav class="nav">
             <a href="../index.html">Início</a>
