--- a/pages/parceiro-cadastro-assessor.html
+++ b/pages/parceiro-cadastro-assessor.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cadastro Distribuidor - CrowdInvest</title>
+  <title>Cadastro Distribuidor - Alba Invest</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/pages.css">
@@ -13,7 +13,7 @@
     <div style="max-width: 900px; margin: 0 auto;">
       <!-- Header -->
       <div class="text-center" style="color: white; margin-bottom: 30px;">
-        <a href="../index.html" class="logo" style="font-size: 1.75rem; color: white !important; -webkit-text-fill-color: white; display: block; margin-bottom: 8px;">CrowdInvest</a>
+        <a href="../index.html" class="logo-container"><img src="../assets/logos/logo-white.png" alt="Alba Invest" style="height: 54px;"></a>
         <span style="font-size: 0.85rem; opacity: 0.8;"><i class="bi bi-person-workspace"></i> Cadastro de Distribuidor</span>
       </div>
 
