--- a/pages/parceiro-cadastro-tipo.html
+++ b/pages/parceiro-cadastro-tipo.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cadastro de Parceiro - CrowdInvest</title>
+  <title>Cadastro de Parceiro - Alba Invest</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/pages.css">
@@ -92,7 +92,7 @@
     <div style="max-width: 1000px; margin: 0 auto;">
       <!-- Header -->
       <div class="text-center" style="color: white; margin-bottom: 25px;">
-        <a href="../index.html" class="logo" style="font-size: 1.75rem; color: white !important; -webkit-text-fill-color: white;">CrowdInvest</a>
+        <a href="../index.html" class="logo-container"><img src="../assets/logos/logo-white.png" alt="Alba Invest" style="height: 54px;"></a>
       </div>
 
       <!-- Main Card -->
