--- a/pages/recuperar-senha.html
+++ b/pages/recuperar-senha.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Recuperar Senha - CrowdInvest</title>
+  <title>Recuperar Senha - Alba Invest</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -11,7 +11,9 @@
   <div class="auth-page">
     <div class="auth-box">
       <div class="auth-logo">
-        <a href="../index.html" class="logo">Alba Invest</a>
+        <a href="../index.html" style="text-decoration: none;">
+          <img src="../assets/logos/logo-orange.png" alt="Alba Invest" style="height: 48px;">
+        </a>
       </div>
 
       <div class="text-center mb-30">
