--- a/pages/taxas-custos.html
+++ b/pages/taxas-custos.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Taxas e custos da plataforma CrowdInvest - Investimentos alternativos gratuitos para investidores. Transparência total em todas as operações.">
-  <title>Taxas e Custos - CrowdInvest - Investimentos Alternativos</title>
+  <meta name="description" content="Taxas e custos da plataforma Alba Invest - Investimentos alternativos gratuitos para investidores. Transparência total em todas as operações.">
+  <title>Taxas e Custos - Alba Invest - Investimentos Alternativos</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/theme-investidor.css">
@@ -25,7 +25,7 @@
       <!-- Header 2026 -->
       <header class="header">
         <div class="container header-content">
-          <a href="../index.html" class="logo">Alba Invest</a>
+          <a href="../index.html" class="logo-container"><img src="../assets/logos/logo-orange.png" alt="Alba Invest" style="height: 54px;"></a>
           <button class="menu-toggle" onclick="toggleMobileMenu()"><i class="bi bi-list"></i></button>
           <nav class="nav">
             <a href="../index.html">Início</a>
@@ -51,7 +51,7 @@
           Transparência Total
         </div>
         <h1>Taxas e Custos</h1>
-        <p>Investir na CrowdInvest e gratuito para investidores. Confira todos os detalhes sobre taxas, limites e custos da plataforma.</p>
+        <p>Investir na Alba Invest e gratuito para investidores. Confira todos os detalhes sobre taxas, limites e custos da plataforma.</p>
       </div>
     </section>
 
