--- a/pages/termos-de-uso.html
+++ b/pages/termos-de-uso.html
@@ -23,7 +23,7 @@
       <!-- Header 2026 -->
       <header class="header">
         <div class="container header-content">
-          <a href="../index.html" class="logo">Alba Invest</a>
+          <a href="../index.html" class="logo-container"><img src="../assets/logos/logo-orange.png" alt="Alba Invest" style="height: 54px;"></a>
           <button class="menu-toggle" onclick="toggleMobileMenu()"><i class="bi bi-list"></i></button>
           <nav class="nav">
             <a href="../index.html">Início</a>
